# malla-kiut

./: CMakeLists.txt  main.cc  main.qml
components/: ConnectionDialog.qml  LeftSidebar.qml  TableGrid.qml
db/: database_manager.cc  database_manager.h  table_model.cc  table_model.h
